# django-awesomplete

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  tests.yml
.run/: django-awesomplete.run.xml
awesomplete/: widgets.py
awesomplete/static/awesomplete/css/: awesomplete.css  widget.css
awesomplete/static/awesomplete/js/: widget.js
awesomplete/templates/awesomplete/: widget.html  widget_wrapper.html
suggestions/: widgets.py
suggestions/static/suggestions/css/: awesomplete.css
tests/: db.sqlite3  fixture.json  fixtures.json  settings.py  urls.py  wsgi.py
tests/app/: admin.py  models.py  urls.py
tests/app/migrations/: 0001_initial.py  0002_auto_20190704_1409.py  0003_city_date.py  0004_city_mayor_email.py  0005_auto_20201021_0805.py  0006_auto_20201021_0815.py  0007_person_language.py  0008_city_tags.py  0009_alter_city_options_alter_city_id_alter_city_tags_and_more.py
tests/tests/: test_widget.py
